website: fix spacing on community page

--- a/website/pages/community/style.module.css
+++ b/website/pages/community/style.module.css
@@ -1,7 +1,9 @@
 .root {
   composes: g-grid-container from global;
+  padding-top: 72px;
+  padding-bottom: 72px;
+}
 
-  & :global(.g-section-header) {
-    margin-bottom: 100px;
-  }
+.sectionHeader {
+  margin-bottom: 100px;
 }
